# WelloRecorder

./: .gitignore  BUILD_DRM_BYPASS.md  LICENSE  README.md  build-drm-bypass.ps1  build-patcher.ps1  cleanup.ps1  generate-license.js  index.html  license-manager.js  main.js  make-final.ps1  package-lock.json  package.json  renderer.js  reset-license.js  styles.css  test-license-logic.js
hook_dll/: CMakeLists.txt  hook.cpp
injector/: binding.gyp  build_log.txt  injector.cpp  package-lock.json  package.json
patcher/: Program.cs
